--- a/bylaws.tex
+++ b/bylaws.tex
@@ -136,7 +136,7 @@ Governing Board responsibilities include, but are not limited to:  %omitted "Col
 % moved the following to the start of the Scope section:  \textit{Any powers not explicitly assigned to a different governing body in these bylaws reside in the Governing Board}. 
 
 \subsection{Board Representation}
-The GB will be composed of 17 members. The Spokespersons and other members of the \exec\ may not serve on the GB.  
+The GB is composed of 17 members. The Spokespersons and other members of the \exec\ may not serve on the GB.  
 The length of a term of service for a Governing Board member is two years; members are allowed to serve at most two terms consecutively.
 To ensure that the board is truly ``\textbf{representative}'' of the collaboration, prior to each GB election,  the GB and the Spokespersons (or the ICCC for the first election) will particularly encourage suitable candidates from a broad range of 
 backgrounds to self-nominate  for GB membership.  Further details on the election of GB members is provided in  \S\ref{sec:gb-elections}.  
@@ -276,7 +276,7 @@ Every year, following completion of the co-spokesperson election and any require
 
 
 \subsubsection{The First Election of the Governing Board}
-For the first election, the top 10  vote-receiving candidates are automatically selected for the board. If representation requirements outlined above are unfulfilled by the elected candidates the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this time the outgoing ICCC is empowered to fill the open seats to meet these requirements. 
+Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including e.g., ``tenure-track" early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc). For the first election, the top 10  vote-receiving candidates are automatically selected for the GB. If representation requirements outlined above are unfulfilled by the elected candidates the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this time the outgoing ICCC is empowered to fill the open seats to meet these requirements. 
 To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
 
 \subsubsection{Election of the Governing Board after the establishment of the Collaboration}
