sort of all over - set up appendix for first election - moved stuff

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -6,6 +6,7 @@
 \usepackage{bm,url}
 \DeclareGraphicsExtensions{.jpg,.pdf,.png,.eps,.ps}
 \usepackage[usenames, dvipsnames]{color}
+\usepackage{appendix}
 \usepackage{ulem}
 
 \textheight = 522pt
@@ -207,7 +208,7 @@ Spokesperson responsibilities include, but are not limited to the following:
 
 %Additionally, the co-spokespersons are ex-officio, non-voting members of the Governing Board.  
 %\textit{The Governing Board, via super-majority vote, may amend these duties.} 
-Spokespersons are elected to two-year terms. \textbf{There are no term limits specified until the Project is established. After the establishment of the Project, term limits of 2 terms are expected to be imposed once CMB-S4 is more established as a project}. The election process is detailed below in Section \ref{sec:elections}. 
+Spokespersons are elected to two-year terms. \textbf{There are no term limits specified prior to the establishment of the Project.  Two term limits are expected to be imposed--- by action of the GB ---after the CMB-S4 Construction Project is firmly established}.  The election process is detailed below in Section \ref{sec:elections}. 
 
 
 
@@ -239,10 +240,14 @@ The Spokespersons will chair the meetings, provide the agendas, and establish ru
 
 \section{Elections}\label{sec:elections}
 All elected positions of the major bodies in the CMB S4 Collaboration serve two-year terms. Elections for each of these bodies will be arranged so that $\sim 50\%$ of the members in each body will be up for election each year. In this section of the bylaws the process and timing for each major election is described.  As there are restrictions placed on the overlap of elected officials between various governing bodies elections are timed to provide collaboration members with multiple opportunities to participate in collaboration governance. 
-Figure \ref{fig:elect_cycle} displays schematically the timing of the election cycles described below.  
+Figure~\ref{fig:elect_cycle} displays schematically the timing of the election cycles described below.  
 
-In a given election year the ordering shall proceed as follows: first elections will be held for co-spokesperson. Next elections will be held (if required by term completion) for Sscience Council chair or deputy chair, chair of the membership council and chair of the publication and speakers council. A third election will be held for Governing Board members. 
-Elections for positions outside the top levels of major bodies may occur when required as such officials are not prohibited from serving other elected roles. Each election is managed by the EVC.   The ICCC must establish this committee prior to the formation of the CMB-S4 collaboration. 
+In a given election year the ordering shall proceed as follows: elections will be held first for the co-spokespersons. Next, elections will be held (if required by term completion) for the Science Council co-chairs, Membership Council chair and for the Publication and Speakers Council chair.  A third election will be held for the Governing Board members. 
+Elections for positions outside the top levels of major bodies may occur when required as such officials are not prohibited from serving other elected roles. Each election is managed by the EVC.   
+
+The procedures for conducting the initial elections of the Collaboration are given in Appendix~\ref{app:first_election}.
+
+% The ICCC must establish this committee prior to the formation of the CMB-S4 collaboration. 
 
 
 \begin{figure}[h!]
@@ -255,16 +260,20 @@ Elections for positions outside the top levels of major bodies may occur when re
 
 \subsection{Elections of a Co-Spokesperson}
 
-Co-Spokespersons are elected to two-year terms. All senior collaboration members (as defined in the membership section below) are allowed to run for these positions.  Normal co-spokesperson elections will be timed such that a slate of nominees can be presented at the GB meeting closest to January 1 each year. The Co-Spokesperson elections will occur prior to elections of the Governing board. As a Co-spokesperson can not be a voting member of the GB, if a voting member of the GB is elected to a co-Spokesperson position they must resign their GB seat prior to the start of Co-Spokesperson term and this vacancy will be filled in the next GB election. 
+Co-Spokespersons are elected to two-year terms. All senior collaboration members (as defined in the membership section below) are allowed to run for these positions.  Normal co-spokesperson elections will be timed such that the EVC can post the slate of nominees to the collaboration June 1 each year for elections to be held by July 1.
+%presented at the GB meeting closest to January 1 each year. 
+The Co-Spokesperson elections will occur prior to elections of the Governing board. As a Co-spokesperson can not be a voting member of the GB, if a voting member of the GB is elected to a co-Spokesperson position they must resign their GB seat prior to the start of Co-Spokesperson term and this vacancy will be filled in the next GB election. 
 
 Prior to the election, Voting Members are asked to nominate individuals to the Election and Voting Commission. Each voter may nominate one candidate and self-nominations will be accepted. %A minimum of two nominations is  required for a nominee to be eligible to appear on the slate of election candidates. 
 After a nomination period, the election committee  will consult with the nominees to ascertain their willingness to stand for the election.
 
 If no candidate agrees to stand for election, the terminating co-spokesperson will continue to serve for six months, after which a special election will be held. The term of the individual elected in a special election will be reduced by the amount needed to cause the sum of his/her term and the additional months served by the terminating co-spokesperson to equal two years.
 
-The election is held through an on-line poll, with votes submitted by Voting Members. The EVC will preside over the election results. Each candidate will provide a Candidate Statement to the EVC, which will collect these documents and make them available to the collaboration via the CMB-S4 internal web page prior to the balloting. The EVC, in consultation with the GB (or ICCC), determines the detailed timing of the balloting and determines procedures for dealing with any election situations not anticipated in the bylaws. Each Voting Member votes for a single candidate for each vacant position; in the first election, in which two Spokespersons will be selected, collaboration members may vote for two candidates. 
+The election is held through an on-line poll, with votes submitted by Voting Members. The EVC will preside over the election results. Each candidate will provide a Candidate Statement to the EVC, which will collect these documents and make them available to the collaboration via the CMB-S4 internal web page prior to the balloting. The EVC, in consultation with the GB  determines the detailed timing of the balloting and determines procedures for dealing with any election situations not anticipated in the bylaws. Each Voting Member votes for a single candidate for each vacant position. %; in the first election, in which two Spokespersons will be selected, collaboration members may vote for two candidates. 
 
-The EVC checks the ballots against the list of qualified voters and tallies the votes. For the first election, the two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons.  In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. The elected candidates will take office when the EVC announces the results of the election to the collaboration via email. 
+%The EVC checks the ballots against the list of qualified voters and tallies the votes. 
+%For the first election, the two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons.  
+In the event of a tie, a runoff election will be held between the two candidates that have the same number of votes. The elected candidates will take office when the EVC announces the results of the election to the collaboration via email. 
 
 \subsection{\exec}
 Following conclusion of the Spokesperson election, elections for various elected positions on the \exec \ will be held during the final year of each position's two-year cycle. The process for these elections proceeds in an identical fashion as to the Spokesperson election. 
@@ -274,13 +283,15 @@ Following conclusion of the Spokesperson election, elections for various elected
 
 Every year, following completion of the co-spokesperson election and any required \exec \ elections, the EVC then carries out elections for seats on the Governing Board whose term is expiring in less than 12 months. The EVC first solicits self-nominations for Governing Board membership and candidate information is then circulated to qualified electors as defined in the membership section of these bylaws. Electors vote via email, with the votes tabulated by the EVC members not standing for election (or, in cases where the whole committee is conflicted, by a third party appointed by the Co-Spokespersons). During the election, each elector may vote for 50\% of the total number of board members. 
 
+After the initial GB is established, it is to amend these bylaws to establish whether to have separate votes different categories of representation on the GB or to continue with a mixed election/appointed governing board model as described in Appendix~\ref{app:first_election}. It is the expectation that the GB be evolve to a fully elected body as the collaboration matures.
 
-\subsubsection{The First Election of the Governing Board}
-Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including e.g., ``tenure-track" early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc). For the first election, the top 10  vote-receiving candidates are automatically selected for the GB. If representation requirements outlined above are unfulfilled by the elected candidates the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this time the outgoing ICCC is empowered to fill the open seats to meet these requirements. 
-To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
 
-\subsubsection{Election of the Governing Board after the establishment of the Collaboration}
- After the collaboration is established, the GB is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB be moved to a fully elected body as the collaboration matures. 
+%\subsubsection{The First Election of the Governing Board}
+%Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including e.g., ``tenure-track" early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc). For the first election, the top 10  vote-receiving candidates are automatically selected for the GB. If representation requirements outlined above are unfulfilled by the elected candidates the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this time the outgoing ICCC is empowered to fill the open seats to meet these requirements. 
+%To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
+
+%\subsubsection{Election of the Governing Board after the establishment of the Collaboration}
+ %After the collaboration is established, the GB is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB be moved to a fully elected body as the collaboration matures. 
 
 \subsection{All Other Elected Positions}
 For other elected Collaboration roles, the EVC is charged with establishing election rules and conducting these elections. Note that the committee \textbf{can not} make voting requirements more restrictive than those for the main body elections. Elected  roles in additional positions are limited to at most 2 year terms. 
@@ -326,7 +337,7 @@ The Publication and Speakers Committee (PSC) consists of thirteen people includi
 
 \subsection{Junior Scientist Advancement Committee}
 
-The role of the Junior Scientist Advancement Committee (JSAC) is to ensure that junior members (defined as students and postdoctoral researchers) within the collaboration are represented, assisted, and supported throughout the  tenure of the CMB-S4 collaboration. This will include arranging mentors for junior members who desire mentorship, and facilitating junior member career advancement through relevant workshops and other activities. The JSAC chair and deputy chair are appointed by the \shorte after the elections and serve 2 year terms that parallel the collaboration's elections. Additional members will volunteer to be on the committee.
+The role of the Junior Scientist Advancement Committee (JSAC) is to ensure that junior members (defined as students and postdoctoral researchers) within the collaboration are represented, assisted, and supported throughout the  tenure of the CMB-S4 collaboration. This will include arranging mentors for junior members who desire mentorship, and facilitating junior member career advancement through relevant workshops and other activities. The JSAC chair and deputy chair are appointed by the \shorte after the elections and serve 2 year terms that parallel the Collaboration's elections. Membership on the JSAC is open to volunteers from the Collaboration, with the approval of the JSAC chair. 
 
 
 \subsection{External Collaborators Committee}
@@ -337,7 +348,7 @@ The committee will draft all the necessary documents for external collaboration 
 
 \subsection{Education and Outreach Committee}
 
-The Education and Public Outreach (EPO) committee is responsible for initiating, overseeing, and recording the S4 collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the \shorte after solicitation of nominations from the full collaboration. The chair is appointed by the co-spokespersons. Terms on the EPO follow the election cycles. A presentation of EPO efforts and written documentation of activities must be provided to the \shorte and the GB at each collaboration meeting or when requested by the GB. 
+The Education and Public Outreach (EPO) committee is responsible for initiating, overseeing, and recording the S4 collaboration's efforts in the areas of public outreach and education. Its mission is to disseminate collaboration results to the public and increase general scientific literacy. The committee is overseen by the \exec \ and members are appointed by the \shorte after solicitation of nominations from the full collaboration. The chair is appointed by the co-spokespersons. Terms on the EPO follow the election cycles. A presentation of EPO efforts and written documentation of activities must be provided to the \shorte at each collaboration meeting or when requested by the \shorte. 
 
 \section{Membership Policy}
 
@@ -606,13 +617,57 @@ Ombudsperson candidates will be self-nominated, the ombudsperson will be selecte
 These bylaws may be amended by the GB. A new bylaw or an amendment may be presented to the GB at one of its regularly scheduled meetings for consideration. Amendments may be introduced by any GB member or by a spokesperson. Proposed amendments will be distributed by email to the entire collaboration for their comments following this meeting. The GB will then consider the amendment for adoption at the next scheduled GB meeting. Approval of an amendment requires a super-majority vote of the GB members present. Additionally, approval of bylaws pertaining to the governance of the Governing Board also require approval of  {\it a majority of voting eligible collaboration members.}
 
 
-\section*{Abbreviations} 
-For abbreviations used outside of a single section. Fill in with abbreviations from Pubs + Membership working group as appropriate
-\begin{itemize}
-\item \shorte - \exec
-\item GB - Governing Board
-\item ICCC - Interim Collaboration Coordination Committee 
-\item SP - Spokesperson/co-Spokespersons
-\end{itemize}
+
+
+
+\appendix
+\appendixpage
+\addappheadtotoc  % to add to TOC 
+\section{Abbreviations}
+
+\Comment{For abbreviations used outside of a single section. Fill in with abbreviations from Pubs + Membership working group as appropriate}
+
+\begin{table}[htdp]
+%\caption{default}
+%\begin{center}
+\begin{tabular}{ll}
+CMB & Cosmic Microwave Background\cr
+Collaboration & CMB-S4 Science Collaboration\cr
+DOE & Department of Energy\cr
+EVC & Election and Voting Commission\cr
+\shorte & \exec\cr
+GB & Governing Board\cr
+ICCC & Interim Collaboration Coordination Committee \cr
+IEVC & Interim Election and Voting Commission\cr
+MC & Membership Committee\cr
+NSF & National Science Foundation\cr
+Project & CMB-S4 Construction Project\cr
+SP & Spokesperson(s)\cr
+WG & Working Group\cr
+\end{tabular}
+%\end{center}
+\label{tab:abbreviations}
+\end{table}
+
+
+
+\section{First Election and Voting Procedures}
+\label{app:first_election}
+
+For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting. 
+
+\subsubsection{First Election of Co-spokespersons} 
+The IEVC follows the election process as described in the Bylaws. Collaboration members may vote for two candidates The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
+
+\subsubsection{First Election of the Governing Board}
+The IEVC follows the election process as described in the Bylaws.  Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
+To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
+
+After the GB is established, it is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB will evolve to a fully elected body as the collaboration matures. 
+
+After the GB is established and its chair selected, the ICCC is terminated.
 
 \end{document}
+
+
+
