more all over... with Suzanne

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -201,6 +201,9 @@ Spokesperson responsibilities include, but are not limited to the following:
 \item Creation of short-term ad hoc committees for the purpose of such tasks as creation of review materials, white papers, exploration of new partnerships, etc.
 \item Organizing and running Collaboration meetings. 
 %\item The co-spokespersons may appoint up to two members of the \exec. This appointment flexibility will enable the SPs to obtain expert advice on an as-needed, short-term basis for matters including (but not limited to) technical and managerial topics that may be outside the expertise of extant collaboration members. Such appointees will be approved by the GB,  and may be removed from the board at the co-spokespersons' discretion. Appointments are limited to 2 years, but may be renewed with approval of the GB. 
+
+\item Assuring the Collaboration public and private websites are maintained, including the posting of all governance roles and responsibilities, and Collaboration documents. 
+
 \item Carrying out other duties as charged to them by the GB. 
 
 %\item Serving as ex-officio, non-voting members of the Governing Board.
@@ -241,11 +244,15 @@ The Spokespersons will chair the meetings, provide the agendas, and establish ru
 
 
 \section{Elections}\label{sec:elections}
-All elected positions of the major bodies in the CMB S4 Collaboration serve two-year terms. Elections for each of these bodies will be arranged so that $\sim 50\%$ of the members in each body will be up for election each year. In this section of the bylaws the process and timing for each major election is described.  As there are restrictions placed on the overlap of elected officials between various governing bodies elections are timed to provide Collaboration members with multiple opportunities to participate in Collaboration governance. 
+All elected positions of the major bodies in the CMB S4 Collaboration serve two-year terms. Elections for each of these bodies will be arranged so that $\sim 50\%$ of the members in each body will be up for election each year. 
+%In this section of the bylaws the process and timing for each major election is described.  
+As there are restrictions placed on the overlap of elected officials between various governing bodies elections are timed to provide Collaboration members with multiple opportunities to participate in Collaboration governance. 
 Figure~\ref{fig:elect_cycle} displays schematically the timing of the election cycles described below.  
 
 In a given election year the ordering shall proceed as follows: elections will be held first for the co-spokespersons. Next, elections will be held (if required by term completion) for the Science Council co-chairs, Membership Council chair and for the Publication and Speakers Council chair.  A third election will be held for the Governing Board members. 
 Elections for positions outside the top levels of major bodies may occur when required as such officials are not prohibited from serving other elected roles. Each election is managed by the EVC.   
+
+The yearly elections will be timed so that the new appointments are able to take office on July 1.
 
 The procedures for conducting the initial elections of the Collaboration are given in Appendix~\ref{app:first_election}.
 
@@ -262,8 +269,7 @@ The procedures for conducting the initial elections of the Collaboration are giv
 
 \subsection{Elections of a Co-Spokesperson}
 
-Co-Spokespersons are elected to two-year terms. All senior Collaboration members (as defined in the membership section below) are allowed to run for these positions.  Normal co-spokesperson elections will be timed such that the EVC can post the slate of nominees to the Collaboration June 1 each year for elections to be held by July 1.
-%presented at the GB meeting closest to January 1 each year. 
+Co-Spokespersons are elected to two-year terms. All senior Collaboration members (as defined in the membership section below) are allowed to run for these positions.  %presented at the GB meeting closest to January 1 each year. 
 The Co-Spokesperson elections will occur prior to elections of the Governing board. As a Co-spokesperson can not be a voting member of the GB, if a voting member of the GB is elected to a co-Spokesperson position they must resign their GB seat prior to the start of Co-Spokesperson term and this vacancy will be filled in the next GB election. 
 
 Prior to the election, Voting Members are asked to nominate individuals to the Election and Voting Commission. Each voter may nominate one candidate and self-nominations will be accepted. %A minimum of two nominations is  required for a nominee to be eligible to appear on the slate of election candidates. 
@@ -283,7 +289,10 @@ Following conclusion of the Spokesperson election, elections for various elected
 \subsection{Governing Board Elections }
 \label{sec:gb-elections}
 
-Every year, following completion of the co-spokesperson election and any required \exec \ elections, the EVC then carries out elections for seats on the Governing Board whose term is expiring in less than 12 months. The EVC first solicits self-nominations for Governing Board membership and candidate information is then circulated to qualified electors as defined in the membership section of these bylaws. Electors vote via email, with the votes tabulated by the EVC members not standing for election (or, in cases where the whole committee is conflicted, by a third party appointed by the Co-Spokespersons). During the election, each elector may vote for 50\% of the total number of board members. 
+Every year, following completion of the co-spokesperson election and any required \exec \ elections, the EVC then carries out elections for seats on the Governing Board whose term is expiring in less than 12 months. The EVC first solicits self-nominations for Governing Board membership and candidate information is then circulated to qualified electors as defined in the membership section of these bylaws. 
+%Electors vote via email, with the votes tabulated by the EVC members not standing for election (or, in cases where the whole committee is conflicted, by a third party appointed by the Co-Spokespersons). 
+Each Voting Member may vote for up to 10 candidates, or fewer as mandated by the EVC.
+% of the total number of board members. 
 
 After the initial GB is established, it is to amend these bylaws to establish whether to have separate votes different categories of representation on the GB or to continue with a mixed election/appointed governing board model as described in Appendix~\ref{app:first_election}. It is the expectation that the GB be evolve to a fully elected body as the Collaboration matures.
 
@@ -625,11 +634,30 @@ These bylaws may be amended by the GB. A new bylaw or an amendment may be presen
 \appendix
 \appendixpage
 \addappheadtotoc  % to add to TOC 
+
+
+
+\section{First Election and Voting Procedures}
+\label{app:first_election}
+
+For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting. 
+
+\subsubsection{First Election of Co-spokespersons} 
+The IEVC follows the election process as described in section~\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
+
+\subsubsection{First Election of the Governing Board}
+The IEVC follows the election process as described in section~\ref{sec:elections} of the Bylaws.  Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
+To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
+
+After the GB is established, it is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB will evolve to a fully elected body as the Collaboration matures. 
+
+After the GB is established and its chair selected, the ICCC is terminated.
+
 \section{Abbreviations}
 
 \Comment{For abbreviations used outside of a single section. Fill in with abbreviations from Pubs + Membership working group as appropriate}
 
-\begin{table}[htdp]
+\begin{table}[h]
 %\caption{default}
 %\begin{center}
 \begin{tabular}{ll}
@@ -651,23 +679,6 @@ WG & Working Group\cr
 \label{tab:abbreviations}
 \end{table}
 
-
-
-\section{First Election and Voting Procedures}
-\label{app:first_election}
-
-For the initial election procedures the ICCC replaces the role of the GB, and an Interim Election and Voting Commission (IEVC) appointed by the ICCC conducts the elections and voting. 
-
-\subsubsection{First Election of Co-spokespersons} 
-The IEVC follows the election process as described in section~\ref{sec:elections} of the Bylaws.  Collaboration members may vote for two candidates The two candidates with the most votes will be elected Spokesperson, with the candidate with the highest vote total selected for a three-year term to enable staggered terms for the co-Spokespersons as illustrated in Figure~\ref{fig:elect_cycle}.
-
-\subsubsection{First Election of the Governing Board}
-The IEVC follows the election process as described in section~\ref{sec:elections} of the Bylaws.  Prior to the first election, the ICCC will define various categories of representation it deems important to include on the GB (possibly including, e.g., tenure-track and early career scientists,  historically underrepresented groups, members from partner countries with significant membership, members of small institutions, representatives of existing CMB programs, etc.). For the first election, the top 10 vote-receiving candidates are automatically selected for the GB. If the representation requirements outlined above are unfulfilled by the elected candidates, the remaining open seats are filled via total votes cast until seats are needed to ensure representation requirements are met. At this juncture the  ICCC is empowered to make appoint the remaining seats to meet these requirements, drawing from the list of nominated candidates. 
-To enable offset elections (to ensure an element of continuity in the GB), 50\% of the first GB members will serve 3 year terms as determined by random draw. 
-
-After the GB is established, it is to amend these bylaws to establish whether to have separate votes for each category of representation or to continue with a mixed election/appointed governing board model. It is the expectation that the GB will evolve to a fully elected body as the Collaboration matures. 
-
-After the GB is established and its chair selected, the ICCC is terminated.
 
 \end{document}
 
